--- a/index.html
+++ b/index.html
@@ -16,8 +16,15 @@
 	{% include releases.html %}
 	{% include footer.html %}
 
-	<script src="/assets/js/jquery-2.1.1.min.js"></script>
-	<script src="/assets/js/functions.js" type="text/javascript"></script>
+	<script src="/assets/js/vendor/jquery-2.1.1.min.js"></script>
+	<script src="/assets/js/vendor/imagesloaded.pkgd.min.js"></script>
+	<script src="/assets/js/vendor/isotope.pkgd.min.js"></script>
+	<script src="/assets/js/vendor/waypoints.min.js"></script>
+
+	<!-- <script src="http://fat.github.io/zoom.js/js/zoom.js"></script> -->
+	
+	<script src="/assets/js/main.js"></script>
+
 	<script>
 		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
