--- a/html/evens.html
+++ b/html/evens.html
@@ -6,3 +6,11 @@ keywords:
 permalink: /events/
 ---
 
+<section class="list">
+    <h3>Events</h3>
+    {% for events in site.categories.events %}
+        <a href="{{ events.url }}">
+            <div class="title">{{ events.title }}</div>
+        </a>
+    {% endfor %}
+</section>
