--- a/html/news.html
+++ b/html/news.html
@@ -6,3 +6,11 @@ keywords:
 permalink: /news/
 ---
 
+<section class="list">
+    <h3>News</h3>
+    {% for news in site.categories.news %}
+        <a href="{{ news.url }}">
+            <div class="title">{{ news.title }}</div>
+        </a>
+    {% endfor %}
+</section>
