--- a/html/index.html
+++ b/html/index.html
@@ -16,15 +16,14 @@ permalink: /
     <div class="overlay"></div>
 </header>
 
-<section class="latest-releases">
-    {% for releases in site.categories.releases limit:60 %}
-    <article class="relaselist-item isotope-item">
-        <a href="{{ site.baseurl }}{{ releases.url }}">
-            <div class="image-contour">
+<section class="list">
+    <h3>Latest Releases</h3>
+    {% for releases in site.categories.releases limit:6 %}
+        <a href="{{ releases.url }}">
+            <div class="outline">
                 <img src="{{ site.baseurl }}/assets/img/releases/{{ releases.release-id }}-hd.jpg" alt="...">
             </div>
             <div class="title">{{ releases.title }}</div>
         </a>
-    </article>
     {% endfor %}
 </section>
