--- a/html/releases.html
+++ b/html/releases.html
@@ -6,3 +6,14 @@ keywords:
 permalink: /releases/
 ---
 
+<section class="list">
+    <h3>Releases</h3>
+    {% for releases in site.categories.releases %}
+        <a href="{{ releases.url }}">
+            <div class="outline">
+                <img src="{{ site.baseurl }}/assets/img/releases/{{ releases.release-id }}-hd.jpg" alt="...">
+            </div>
+            <div class="title">{{ releases.title }}</div>
+        </a>
+    {% endfor %}
+</section>
