--- a/html/index.html
+++ b/html/index.html
@@ -18,12 +18,21 @@ permalink: /
 
 <section class="list">
     <h3>Latest Releases</h3>
-    {% for releases in site.categories.releases limit:6 %}
+    {% for releases in site.categories.releases limit:4 %}
         <a href="{{ releases.url }}">
             <div class="outline">
                 <img src="{{ site.baseurl }}/assets/img/releases/{{ releases.release-id }}-hd.jpg" alt="...">
             </div>
             <div class="title">{{ releases.title }}</div>
+        </a>
+    {% endfor %}
+</section>
+
+<section class="list">
+    <h3>Artists</h3>
+    {% for artists in site.categories.artists limit:60 %}
+        <a href="{{ artists.url }}">
+            <div class="title">{{ artists.title }}</div>
         </a>
     {% endfor %}
 </section>
