--- a/html/friends.html
+++ b/html/friends.html
@@ -5,7 +5,6 @@ meta: Sentimony Records - Electronic psychedelic music label from Kyiv, Ukraine
 keywords: 
 permalink: /friends/
 ---
-
 <section class="list">
     <h3>Friends</h3>
     {% for friends in site.categories.friends %}
@@ -14,7 +13,7 @@ permalink: /friends/
                 {{ friends.title }}
                 <div>{{ friends.site }}</div>
                 <div>{{ friends.bandcamp }}</div>
-                <div>{{ friends.fasebook }}</div>
+                <div>{{ friends.facebook }}</div>
                 <div>{{ friends.soundcloud }}</div>
             </div>
         </a>
