--- a/html/index.html
+++ b/html/index.html
@@ -5,7 +5,6 @@ meta: Sentimony Records - Electronic psychedelic music label from Kyiv, Ukraine
 keywords: 
 permalink: /
 ---
-
 <header>
     <div class="content">
         <hgroup>
@@ -30,8 +29,11 @@ permalink: /
 
 <section class="list">
     <h3>Artists</h3>
-    {% for artists in site.categories.artists limit:60 %}
+    {% for artists in site.categories.artists %}
         <a href="{{ artists.url }}">
+            <div class="outline">
+                <img src="{{ site.baseurl }}/assets/img/artists/{{ artists.photo }}.jpg" alt="Photo Of {{ artists.title }}">
+            </div>
             <div class="title">{{ artists.title }}</div>
         </a>
     {% endfor %}
