--- a/html/releases.html
+++ b/html/releases.html
@@ -10,7 +10,7 @@ permalink: /releases/
     {% for releases in site.categories.releases %}
         <a href="{{ releases.url }}">
             <div class="outline">
-                <img src="{{ site.baseurl }}/assets/img/releases/{{ releases.release-id }}-hd.jpg" alt="...">
+                <img src="{{ site.baseurl }}/assets/img/releases/{{ releases.release-id }}.jpg" alt="Cover Of {{ releases.title }}">
             </div>
             <div class="title">{{ releases.title }}</div>
         </a>
