--- a/html/index.html
+++ b/html/index.html
@@ -17,24 +17,12 @@ permalink: /
 
 <section class="list">
     <h3>Latest Releases</h3>
-    {% for release in site.categories.release limit:4 %}
-        <a href="{{ release.url }}">
+    {% for releases in site.categories.releases limit:4 %}
+        <a href="{{ releases.url }}">
             <div class="outline">
-                <img src="{{ site.baseurl }}/assets/img/releases/{{ release.release-id }}.jpg" alt="Cover Of {{ release.title }}">
+                <img src="{{ site.baseurl }}/assets/img/releases/{{ releases.id }}.jpg" alt="Cover Of {{ releases.title }}">
             </div>
-            <div class="title">{{ release.title }}</div>
-        </a>
-    {% endfor %}
-</section>
-
-<section class="list">
-    <h3>Artists</h3>
-    {% for artists in site.categories.artists %}
-        <a href="{{ artists.url }}">
-            <div class="outline">
-                <img src="{{ site.baseurl }}/assets/img/artists/{{ artists.photo }}.jpg" alt="Photo Of {{ artists.title }}">
-            </div>
-            <div class="title">{{ artists.title }}</div>
+            <div class="title">{{ releases.title }}</div>
         </a>
     {% endfor %}
 </section>
