--- a/html/releases.html
+++ b/html/releases.html
@@ -7,12 +7,12 @@ permalink: /releases/
 ---
 <section class="list">
     <h3>Releases</h3>
-    {% for release in site.categories.release %}
-        <a href="{{ release.url }}">
+    {% for releases in site.categories.releases %}
+        <a href="{{ releases.url }}">
             <div class="outline">
-                <img src="{{ site.baseurl }}/assets/img/releases/{{ release.release-id }}.jpg" alt="Cover Of {{ release.title }}">
+                <img src="{{ site.baseurl }}/assets/img/releases/{{ releases.id }}.jpg" alt="Cover Of {{ releases.title }}">
             </div>
-            <div class="title">{{ release.title }}</div>
+            <div class="title">{{ releases.title }}</div>
         </a>
     {% endfor %}
 </section>
