--- a/_posts/pages/0001-01-01-artists.html
+++ b/_posts/pages/0001-01-01-artists.html
@@ -5,18 +5,35 @@ meta: Sentimony Records - Electronic psychedelic music label from Kyiv, Ukraine
 keywords: 
 permalink: /artists/
 ---
-<section class="list">
+<section class="ArtistList">
   <h3>Artists</h3>
-  {% for artists in site.categories.artists %}
-    <a href="{{ artists.url }}">
-      <div class="outline">
-        <img 
-          data-src="holder.js/700x700?auto=yes&text={{ artists.title }}&fg=000&bg=0ff"
-          data-layzr="{{ site.baseurl }}/assets/img/artists/{{ artists.id }}.jpg"
-          data-layzr-retina="{{ site.baseurl }}/assets/img/artists/{{ artists.id }}@2x.jpg"
-        >
-      </div>
-      <div class="title">{{ artists.title }}</div>
-    </a>
-  {% endfor %}
+
+  <nav class="filter isotope-filter">
+    <span>Sort: </span>
+    <a data-filter="*" class="selected">View All</a>
+    <br>
+    <span>By Style: </span>
+    <a data-filter=".chillout">Chillout</a>
+    <a data-filter=".goatrance">Goa Trance</a>
+    <a data-filter=".darktrance">Dark Trance</a>
+  </nav>
+
+  <div class="isotope-container">
+    {% for artists in site.categories.artists %}
+      <a href="{{ artists.url }}" class="ArtistItem isotope-item {{ artists.filterStyle }} ">
+        <div class="image-container">
+          <img class="lazy"
+            data-original="{{ site.baseurl }}/assets/img/artists/{{ artists.id }}.jpg"
+            alt="{{ artists.title }}"
+          >
+          <!-- <img 
+            data-src="holder.js/700x700?auto=yes&text={{ artists.title }}&fg=000&bg=0ff"
+            data-layzr="{{ site.baseurl }}/assets/img/artists/{{ artists.id }}.jpg"
+            data-layzr-retina="{{ site.baseurl }}/assets/img/artists/{{ artists.id }}@2x.jpg"
+          > -->
+        </div>
+        <div class="title">{{ artists.title }}</div>
+      </a>
+    {% endfor %}
+  </div>
 </section>
