--- a/_posts/pages/0001-01-01-home.html
+++ b/_posts/pages/0001-01-01-home.html
@@ -6,27 +6,27 @@ keywords:
 permalink: /
 ---
 <header>
-  <div class="content">
-    <hgroup>
-      <h1>Sentimony Records</h1>
-      <h2>Electronic music label</h2>
-    </hgroup>
-  </div>
-  <div class="overlay"></div>
+    <div class="content">
+        <hgroup>
+            <h1>Sentimony Records</h1>
+            <h2>Electronic music label</h2>
+        </hgroup>
+    </div>
+    <div class="overlay"></div>
 </header>
 
 <section class="list">
-  <h3>Latest Releases</h3>
-  {% for releases in site.categories.releases limit:4 %}
-    <a href="{{ releases.url }}">
-      <div class="outline">
-        <img 
-          data-src="holder.js/700x700?auto=yes&text={{ releases.title }}&fg=000&bg=0ff"
-          data-layzr="{{ site.baseurl }}/assets/img/releases/{{ releases.id }}.jpg"
-          data-layzr-retina="{{ site.baseurl }}/assets/img/releases/{{ releases.id }}@2x.jpg"
-        >
-      </div>
-      <div class="title">{{ releases.title }}</div>
-    </a>
-  {% endfor %}
+    <h3>Latest Releases</h3>
+        {% for i in site.categories.releases limit: 4 %}
+            <a href="{{ i.url }}">
+                <div class="outline">
+                    <img 
+                        data-src="holder.js/700x700?auto=yes&text={{ i.title }}&fg=000&bg=0ff"
+                        data-layzr="{{ site.baseurl }}/assets/img/releases/{{ i.id }}.jpg"
+                        data-layzr-retina="{{ site.baseurl }}/assets/img/releases/{{ i.id }}@2x.jpg"
+                    >
+                </div>
+                <div class="title">{{ i.title }}</div>
+            </a>
+        {% endfor %}
 </section>
