--- a/_posts/pages/0001-01-01-releases.html
+++ b/_posts/pages/0001-01-01-releases.html
@@ -5,43 +5,44 @@ meta: Sentimony Records - Electronic psychedelic music label from Kyiv, Ukraine
 keywords: 
 permalink: /releases/
 ---
+
 <section class="ReleaseList">
-  <h3>Releases</h3>
+    <h3>Releases</h3>
 
-  <nav class="filter isotope-filter">
-    <span>Sort: </span>
-    <a data-filter="*" class="selected">View All</a>
-    <br>
-    <span>By Label: </span>
-    <a data-filter=".sentimony">Sentimony Records</a>
-    <a data-filter=".aquadeep">Aqua Deep Music</a>
-    <a data-filter=".lookinglook">Lookinglook Records</a>
-    <br>
-    <span>By Style: </span>
-    <a data-filter=".chillout">Chillout</a>
-    <a data-filter=".goatrance">Goa Trance</a>
-    <a data-filter=".darktrance">Dark Trance</a>
-    <br>
-    <span>By Release Format: </span>
-    <a data-filter=".compilation">Compilations</a>
-    <a data-filter=".album">Albums</a>
-    <a data-filter=".split">Splits</a>
-    <a data-filter=".single">Singles</a>
-  </nav>
+    <nav class="filter isotope-filter">
+        <span>Sort: </span>
+        <a data-filter="*">View All</a>
+        <br>
+        <span>By Label: </span>
+        <a data-filter=".sentimony" class="selected">Sentimony Records</a>
+        <a data-filter=".aquadeep">Aqua Deep Music</a>
+        <a data-filter=".lookinglook">Lookinglook Records</a>
+        <br>
+        <span>By Style: </span>
+        <a data-filter=".chillout">Chillout</a>
+        <a data-filter=".goatrance">Goa Trance</a>
+        <a data-filter=".darktrance">Dark Trance</a>
+        <br>
+        <span>By Release Format: </span>
+        <a data-filter=".compilation">Compilations</a>
+        <a data-filter=".album">Albums</a>
+        <a data-filter=".split">Splits</a>
+        <a data-filter=".single">Singles</a>
+    </nav>
 
-  <div class="isotope-container">
-    {% for releases in site.categories.releases %}
-      <a href="{{ releases.url }}" class="ReleaseItem isotope-item {
+    <div class="isotope-container">
+        {% for releases in site.categories.releases %}
+            <a href="{{ releases.url }}" class="ReleaseItem isotope-item {
  {{ releases.filterLabel }} {{ releases.filterStyle }} {{ releases.filterFormat }} ">
-        <div class="image-container">
-          <img 
-            data-src="holder.js/700x700?auto=yes&text={{ releases.title }}&fg=000&bg=0ff"
-            data-layzr="{{ site.baseurl }}/assets/img/releases/{{ releases.id }}.jpg"
-            data-layzr-retina="{{ site.baseurl }}/assets/img/releases/{{ releases.id }}@2x.jpg"
-          >
-        </div>
-        <div class="title">{{ releases.title }}</div>
-      </a>
-    {% endfor %}
-  </div>
+                <div class="image-container">
+                    <img 
+                        data-src="holder.js/700x700?auto=yes&text={{ releases.title }}&fg=000&bg=0ff"
+                        data-layzr="{{ site.baseurl }}/assets/img/releases/{{ releases.id }}.jpg"
+                        data-layzr-retina="{{ site.baseurl }}/assets/img/releases/{{ releases.id }}@2x.jpg"
+                    >
+                </div>
+                <div class="title">{{ releases.title }}</div>
+            </a>
+        {% endfor %}
+    </div>
 </section>
