huge project cleaning and upd :snowflake:

--- a/_pages/artists.html
+++ b/_pages/artists.html
@@ -1,8 +1,7 @@
 ---
 layout: default
-titleAfter: Electronic Psychedelic Music
+title: Artists
 meta: Sentimony Records - Electronic psychedelic music label from Kyiv, Ukraine
-keywords: 
 permalink: /artists/
 ---
 
@@ -28,13 +27,13 @@ permalink: /artists/
             <a href="{{ artists.url }}" class="ArtistItem isotope-item {{ artists.filterLabel }} {{ artists.filterStyle }} ">
                 <div class="image-container">
                     <img class="lazy"
-                        data-original="{{ site.baseurl }}/assets/img/artists/{{ artists.id }}.jpg"
+                        data-original="{{ site.baseurl }}/assets/img/artists/{{ artists.slug }}.jpg"
                         alt="{{ artists.title }}"
                     >
                     <!-- <img 
                         data-src="holder.js/700x700?auto=yes&text={{ artists.title }}&fg=000&bg=0ff"
-                        data-layzr="{{ site.baseurl }}/assets/img/artists/{{ artists.id }}.jpg"
-                        data-layzr-retina="{{ site.baseurl }}/assets/img/artists/{{ artists.id }}@2x.jpg"
+                        data-layzr="{{ site.baseurl }}/assets/img/artists/{{ artists.slug }}.jpg"
+                        data-layzr-retina="{{ site.baseurl }}/assets/img/artists/{{ artists.slug }}@2x.jpg"
                     > -->
                 </div>
                 <div class="title">{{ artists.title }}</div>
