--- a/_pages/evens.html
+++ b/_pages/evens.html
@@ -1,8 +1,7 @@
 ---
 layout: default
-titleAfter: Electronic Psychedelic Music
+title: Events
 meta: Sentimony Records - Electronic psychedelic music label from Kyiv, Ukraine
-keywords: 
 permalink: /events/
 ---
 
