--- a/_pages/home.html
+++ b/_pages/home.html
@@ -1,8 +1,7 @@
 ---
 layout: default
-titleAfter: Electronic Psychedelic Music
+titleAfter: Electronic Music Label
 meta: Sentimony Records - Electronic psychedelic music label from Kyiv, Ukraine
-keywords: 
 permalink: /
 ---
 
@@ -23,8 +22,8 @@ permalink: /
                 <div class="outline">
                     <img 
                         data-src="holder.js/700x700?auto=yes&text={{ i.title }}&fg=000&bg=0ff"
-                        data-layzr="{{ site.baseurl }}/assets/img/releases/{{ i.id }}.jpg"
-                        data-layzr-retina="{{ site.baseurl }}/assets/img/releases/{{ i.id }}@2x.jpg"
+                        data-layzr="{{ site.baseurl }}/assets/img/releases/{{ i.slug }}.jpg"
+                        data-layzr-retina="{{ site.baseurl }}/assets/img/releases/{{ i.slug }}@2x.jpg"
                     >
                 </div>
                 <div class="title">{{ i.title }}</div>
