--- a/_pages/releases.html
+++ b/_pages/releases.html
@@ -1,8 +1,7 @@
 ---
 layout: default
-titleAfter: Electronic Psychedelic Music
+title: Releases
 meta: Sentimony Records - Electronic psychedelic music label from Kyiv, Ukraine
-keywords: 
 permalink: /releases/
 ---
 
@@ -35,8 +34,8 @@ permalink: /releases/
                 <div class="image-container">
                     <img 
                         data-src="holder.js/700x700?auto=yes&text={{ releases.title }}&fg=000&bg=0ff"
-                        data-layzr="{{ site.baseurl }}/assets/img/releases/{{ releases.id }}.jpg"
-                        data-layzr-retina="{{ site.baseurl }}/assets/img/releases/{{ releases.id }}@2x.jpg"
+                        data-layzr="{{ site.baseurl }}/assets/img/releases/{{ releases.slug }}.jpg"
+                        data-layzr-retina="{{ site.baseurl }}/assets/img/releases/{{ releases.slug }}@2x.jpg"
                     >
                 </div>
                 <div class="title">{{ releases.title }}</div>
