--- a/_pages/news.html
+++ b/_pages/news.html
@@ -1,8 +1,7 @@
 ---
 layout: default
-titleAfter: Electronic Psychedelic Music
+title: News
 meta: Sentimony Records - Electronic psychedelic music label from Kyiv, Ukraine
-keywords: 
 permalink: /news/
 ---
 
