--- a/_pages/news.html
+++ b/_pages/news.html
@@ -1,15 +1,15 @@
 ---
 layout: default
 title: News
-meta: Sentimony Records - Electronic psychedelic music label from Kyiv, Ukraine
+description: News of Sentimony Records
 permalink: /news/
 ---
 
 <section class="list">
-    <h3>News</h3>
-    {% for news in site.categories.news %}
-        <a href="{{ news.url }}">
-            <div class="title">{{ news.title }}</div>
-        </a>
-    {% endfor %}
+  <h3>News</h3>
+  {% for news in site.categories.news %}
+    <a href="{{ news.url }}">
+      <div class="title">{{ news.title }}</div>
+    </a>
+  {% endfor %}
 </section>
