--- a/_components/Footer/index.html
+++ b/_components/Footer/index.html
@@ -34,5 +34,13 @@
   <!-- <div>Web Development & Design by <a href="http://ihororlovskyi.com" target="_blank">Ihor Orlovskyi</a></div> -->
   <div>2006 - 2017 © Sentimony Records</div>
   <div>All Rights Reserved</div>
+
+  <br>
+
+  <nav class="labels labels--small">
+    <a href="https://sentimony-nuxt.netlify.com">nuxt</a>
+    <a href="https://sentimony-gatsby.netlify.com">gatsby</a>
+    <a href="https://sentimony-jekyll.netlify.com" class="active">jekyll</a>
+  </nav>
 </footer>
 
