--- a/_components/Footer/index.html
+++ b/_components/Footer/index.html
@@ -38,9 +38,9 @@
   <br>
 
   <nav class="labels labels--small">
-    <a href="https://sentimony-nuxt.netlify.com">nuxt</a>
-    <a href="https://sentimony-gatsby.netlify.com">gatsby</a>
-    <a href="https://sentimony-jekyll.netlify.com" class="active">jekyll</a>
+    <a href="https://sentimony.com">nuxt</a>
+    <a href="https://gatsby.sentimony.com">gatsby</a>
+    <a href="https://jekyll.sentimony.com" class="active">jekyll</a>
   </nav>
 </footer>
 
