add more updates

--- a/_components/Footer/index.html
+++ b/_components/Footer/index.html
@@ -27,8 +27,8 @@
 
   <nav class="labels">
     <a href="https://sentimony.com" class="active">Sentimony Records</a>
-    <a href="https://aquadeepmusic.github.io">Aqua Deep Music</a>
-    <a href="https://lookinglook.github.io">Lookinglook Records</a>
+    <a href="https://aquadeepmusic.sentimony.com">Aqua Deep Music</a>
+    <a href="https://lookinglook.sentimony.com">Lookinglook Records</a>
   </nav>
 
   <!-- <div>Web Development & Design by <a href="http://ihororlovskyi.com" target="_blank">Ihor Orlovskyi</a></div> -->
@@ -38,9 +38,9 @@
   <br>
 
   <nav class="labels labels--small">
-    <a href="https://sentimony.com">nuxt</a>
+    <a href="https://sentimony.com" class="active">jekyll</a>
     <a href="https://gatsby.sentimony.com">gatsby</a>
-    <a href="https://jekyll.sentimony.com" class="active">jekyll</a>
+    <a href="https://nuxt.sentimony.com">nuxt</a>
   </nav>
 </footer>
 
