--- a/_components/ReleasesListSwiper/index.html
+++ b/_components/ReleasesListSwiper/index.html
@@ -1,21 +1,22 @@
-<div class="swiper-container">
-  <div class="swiper-wrapper">
-    {% for i in site.categories.releases %}
-    <div class="swiper-slide {% if page.url contains i.slug %}is-active{% endif %}">
-      <a class="" href="{{ i.url }}">
-        <div>
+<div class="releases-list-swiper">
+  <div class="releases-list-swiper__title">Our releases</div>
+  <div class="swiper-container">
+    <div class="swiper-wrapper">
+      {% for i in site.categories.releases %}
+      <div class="swiper-slide {% if page.url contains i.slug %}is-active{% endif %}">
+        <a class="" href="{{ i.url }}">
           {% if i.cover %}
           <img src="https://content.sentimony.com/assets/img/releases/small/{{ i.cat_no }}/{{ i.slug }}.jpg">
           {% else %}
           <img src="https://content.sentimony.com/assets/img/releases/small/artwork-in-progress.jpg">
           {% endif %}
-        </div>
-      </a>
-      <div>{{ i.title }}</div>
-      <div>{% if page.url contains i.slug %}is-active{% endif %}</div>
+        </a>
+        <div>{{ i.title }}</div>
+        <div>{% if page.url contains i.slug %}is-active{% endif %}</div>
+      </div>
+      {% endfor %}
     </div>
-    {% endfor %}
+    <div class="swiper-button-prev swiper-button-white"></div>
+    <div class="swiper-button-next swiper-button-white"></div>
   </div>
-  <div class="swiper-button-prev swiper-button-white"></div>
-  <div class="swiper-button-next swiper-button-white"></div>
 </div>
