--- a/_components/Header/index.html
+++ b/_components/Header/index.html
@@ -4,25 +4,28 @@
   {% include LogoLink/index.html %}
 
     <nav class="header__main-menu">
-      <!-- <a href="{{ site.baseurl }}/news/" class="{% if page.url contains 'news' %}active{% endif %}">News</a> -->
-      <a class="header__main-menu-link" href="{{ site.baseurl }}/release/zymosis-insight/" class="{% if page.url contains 'release' %}active{% endif %}">Releases</a>
-      <!-- <a href="{{ site.baseurl }}/artists/" class="{% if page.url contains 'artist' %}active{% endif %}">Artists</a> -->
-      <!-- <a href="{{ site.baseurl }}/events/" class="{% if page.url contains 'event' %}active{% endif %}">Events</a> -->
-      <!-- <a href="{{ site.baseurl }}/friends/" class="{% if page.url contains 'friends' %}active{% endif %}">Friends</a> -->
+      <!-- <a href="{{ site.baseurl }}/news/" class="{% if page.url contains 'news' %}is-selected{% endif %}">News</a> -->
+      <a href="{{ site.baseurl }}/release/zymosis-insight/" class="header__main-menu-link {% if page.url contains 'release' %}is-selected{% endif %}">Releases</a>
+      <!-- <a href="{{ site.baseurl }}/artists/" class="{% if page.url contains 'artist' %}is-selected{% endif %}">Artists</a> -->
+      <!-- <a href="{{ site.baseurl }}/events/" class="{% if page.url contains 'event' %}is-selected{% endif %}">Events</a> -->
+      <!-- <a href="{{ site.baseurl }}/friends/" class="{% if page.url contains 'friends' %}is-selected{% endif %}">Friends</a> -->
     </nav>
 
     <nav class="header__social-menu">
       <a class="header__social-menu-link" href="https://sentimony.bandcamp.com" target="_blank">
-          <span class="icon-bandcamp"></span>
-          <!-- <span class="tooltip">bandcamp</span> -->
+        <img class="header__social-menu-link-img" src="{{ site.baseurl }}/assets/img/svg-icons/bandcamp.svg">
+        <span class="header__social-menu-link-icon-bandcamp"></span>
+        <span class="header__social-menu-link-tooltip">bandcamp</span>
       </a>
       <a class="header__social-menu-link" href="https://www.facebook.com/sentimony.records" target="_blank">
-          <span class="icon-facebook"></span>
-          <!-- <span class="tooltip">facebook</span> -->
+        <img class="header__social-menu-link-img" src="{{ site.baseurl }}/assets/img/svg-icons/facebook.svg">
+        <span class="header__social-menu-link-icon-facebook"></span>
+        <span class="header__social-menu-link-tooltip">facebook</span>
       </a>
       <a class="header__social-menu-link" href="https://soundcloud.com/sentimony" target="_blank">
-          <span class="icon-soundcloud"></span>
-          <!-- <span class="tooltip">soundcloud</span> -->
+        <img class="header__social-menu-link-img" src="{{ site.baseurl }}/assets/img/svg-icons/soundcloud.svg">
+        <span class="header__social-menu-link-icon-soundcloud"></span>
+        <span class="header__social-menu-link-tooltip">soundcloud</span>
       </a>
     </nav>
 
