--- a/_components/LogoLink/index.html
+++ b/_components/LogoLink/index.html
@@ -1,5 +1,5 @@
-<a class="logolink" href="{{ site.baseurl }}/" class="{% if page.url == '/'%}active{% endif %}">
-  <!-- <div class="logolink__icon"></div> -->
+<a href="{{ site.baseurl }}/" class="logolink {% if page.url == '/'%}is-selected{% endif %}">
+  <div class="logolink__icon"></div>
   <img class="logolink__logo" src="{{ site.baseurl }}/assets/img/svg-icons/sentimony-records-logo.svg" alt="Sentimony Records Logo SVG">
   <div class="logolink__text">
     <div class="logolink__title">Sentimony Records</div>
