--- a/_components/ReleasePage/index.html
+++ b/_components/ReleasePage/index.html
@@ -1,15 +1,9 @@
 <article class="releases-page">
 
   <div class="releases-page__cover">
-    {% if page.cover %}
-    <a class="releases-page__cover-link" href="https://content.sentimony.com/assets/img/releases/large/{{ page.cat_no }}/{{ page.slug }}.jpg">
-      <img class="releases-page__cover-img" src="https://content.sentimony.com/assets/img/releases/medium/{{ page.cat_no }}/{{ page.slug }}.jpg">
+    <a class="releases-page__cover-link" href="https://content.sentimony.com/assets/img/releases/large/{% if page.cover %}{{ page.cat_no }}/{{ page.slug }}.jpg{% else %}artwork-in-progress.jpg{% endif %}">
+      <img class="releases-page__cover-img" src="https://content.sentimony.com/assets/img/releases/medium/{% if page.cover %}{{ page.cat_no }}/{{ page.slug }}.jpg{% else %}artwork-in-progress.jpg{% endif %}">
     </a>
-    {% else %}
-    <a class="releases-page__cover-link" href="https://content.sentimony.com/assets/img/releases/large/artwork-in-progress.jpg">
-      <img class="releases-page__cover-img" src="https://content.sentimony.com/assets/img/releases/medium/artwork-in-progress.jpg">
-    </a>
-    {% endif %}
   </div>
 
   <!-- {{ content }} -->
@@ -22,6 +16,7 @@
     <div>
       <a class="releases-page__bandcamp-btn" href="{{ page.bandcamp }}">
         <span class="releases-page__bandcamp-btn-icon"></span>
+        <img class="releases-page__bandcamp-btn-img" src="{{ site.baseurl }}/assets/img/svg-icons/bandcamp.svg">
         Bandcamp
       </a>
     </div>
