--- a/_components/ReleasesListSwiper/index.html
+++ b/_components/ReleasesListSwiper/index.html
@@ -1,9 +1,9 @@
 <div class="releases-list-swiper">
   <div class="releases-list-swiper__title">Our releases</div>
-  <div class="swiper-container">
+  <div class="swiper-container releases-list-swiper__container">
     <div class="swiper-wrapper">
       {% for i in site.categories.releases %}
-      <div class="swiper-slide {% if page.url contains i.slug %}is-active{% endif %}">
+      <div class="swiper-slide releases-list-swiper__item{% if page.url contains i.slug %} is-selected{% endif %}">
         <div class="releases-list-swiper__item-cover">
           <a class="releases-list-swiper__item-cover-link" href="{{ i.url }}">
             <img class="releases-list-swiper__item-cover-img" src="https://content.sentimony.com/assets/img/releases/small/{% if i.cover %}{{ i.cat_no }}/{{ i.slug }}.jpg{% else %}artwork-in-progress.jpg{% endif %}">
