add mobile styles

--- a/_components/Header/index.html
+++ b/_components/Header/index.html
@@ -4,11 +4,11 @@
   {% include LogoLink/index.html %}
 
     <nav class="header__main-menu">
-      <!-- <a href="{{ site.baseurl }}/news/" class="{% if page.url contains 'news' %}is-selected{% endif %}">News</a> -->
-      <a href="{{ site.baseurl }}/release/zymosis-insight/" class="header__main-menu-link {% if page.url contains 'release' %}is-selected{% endif %}">Releases</a>
-      <!-- <a href="{{ site.baseurl }}/artists/" class="{% if page.url contains 'artist' %}is-selected{% endif %}">Artists</a> -->
-      <!-- <a href="{{ site.baseurl }}/events/" class="{% if page.url contains 'event' %}is-selected{% endif %}">Events</a> -->
-      <!-- <a href="{{ site.baseurl }}/friends/" class="{% if page.url contains 'friends' %}is-selected{% endif %}">Friends</a> -->
+      <!-- <a href="{{ site.baseurl }}/news/" class="header__main-menu-link{% if page.url contains 'news' %} is-selected{% endif %}">News</a> -->
+      <a href="{{ site.baseurl }}/release/va-the-ten/" class="header__main-menu-link{% if page.url contains 'release' %} is-selected{% endif %}">Releases</a>
+      <!-- <a href="{{ site.baseurl }}/artists/" class="header__main-menu-link{% if page.url contains 'artist' %} is-selected{% endif %}">Artists</a> -->
+      <!-- <a href="{{ site.baseurl }}/events/" class="header__main-menu-link{% if page.url contains 'event' %} is-selected{% endif %}">Events</a> -->
+      <!-- <a href="{{ site.baseurl }}/friends/" class="header__main-menu-link{% if page.url contains 'friends' %} is-selected{% endif %}">Friends</a> -->
     </nav>
 
     <nav class="header__social-menu">
