add buttons concept

--- a/_components/Footer/index.html
+++ b/_components/Footer/index.html
@@ -1,19 +1,22 @@
 <footer class="footer">
 
-  <div>Follow Us:</div>
-
   <nav class="social">
+    <!-- <span>Follow Us:</span> -->
     <a href="https://sentimony.bandcamp.com" target="_blank">
-        <span class="icon-bandcamp"></span>
-        <span class="tooltip">bandcamp</span>
+      <span class="icon-bandcamp"></span>
+      <span class="tooltip">bandcamp</span>
     </a>
     <a href="https://www.facebook.com/sentimony.records" target="_blank">
-        <span class="icon-facebook"></span>
-        <span class="tooltip">facebook</span>
+      <span class="icon-facebook"></span>
+      <span class="tooltip">facebook</span>
+    </a>
+    <a href="https://www.youtube.com/channel/UCMvuVxLPE5VBjw0YH1uE4ig" target="_blank">
+      <span class="icon-youtube"></span>
+      <span class="tooltip">youtube</span>
     </a>
     <a href="https://soundcloud.com/sentimony" target="_blank">
-        <span class="icon-soundcloud"></span>
-        <span class="tooltip">soundcloud</span>
+      <span class="icon-soundcloud"></span>
+      <span class="tooltip">soundcloud</span>
     </a>
     <!-- <a href="https://twitter.com/sentimony" target="_blank">
         <span class="icon-twitter"></span>
@@ -34,6 +37,7 @@
   <!-- <div>Web Development & Design by <a href="http://ihororlovskyi.com" target="_blank">Ihor Orlovskyi</a></div> -->
   <div>2006 - 2017 © Sentimony Records</div>
   <div>All Rights Reserved</div>
+  <div><span class="icon-sentimony-records-logo"></span></div>
 
   <br>
 
