--- a/_components/Header/index.html
+++ b/_components/Header/index.html
@@ -5,7 +5,7 @@
 
     <nav class="header__main-menu">
       <!-- <a href="{{ site.baseurl }}/news/" class="header__main-menu-link{% if page.url contains 'news' %} is-selected{% endif %}">News</a> -->
-      <a href="{{ site.baseurl }}/release/va-the-ten/" class="header__main-menu-link{% if page.url contains 'release' %} is-selected{% endif %}">Releases</a>
+      <a href="{{ site.baseurl }}/release/tentura-beyond-illusion/" class="header__main-menu-link{% if page.url contains 'release' %} is-selected{% endif %}">Releases</a>
       <!-- <a href="{{ site.baseurl }}/artists/" class="header__main-menu-link{% if page.url contains 'artist' %} is-selected{% endif %}">Artists</a> -->
       <!-- <a href="{{ site.baseurl }}/events/" class="header__main-menu-link{% if page.url contains 'event' %} is-selected{% endif %}">Events</a> -->
       <!-- <a href="{{ site.baseurl }}/friends/" class="header__main-menu-link{% if page.url contains 'friends' %} is-selected{% endif %}">Friends</a> -->
@@ -22,11 +22,16 @@
         <span class="header__social-menu-link-icon-facebook"></span>
         <span class="header__social-menu-link-tooltip">facebook</span>
       </a>
-      <a class="header__social-menu-link" href="https://soundcloud.com/sentimony" target="_blank">
+      <a class="header__social-menu-link" href="https://www.youtube.com/channel/UCMvuVxLPE5VBjw0YH1uE4ig" target="_blank">
+        <img class="header__social-menu-link-img" src="{{ site.baseurl }}/assets/img/svg-icons/youtube.svg">
+        <span class="header__social-menu-link-icon-youtube"></span>
+        <span class="header__social-menu-link-tooltip">youtube</span>
+      </a>
+      <!-- <a class="header__social-menu-link" href="https://soundcloud.com/sentimony" target="_blank">
         <img class="header__social-menu-link-img" src="{{ site.baseurl }}/assets/img/svg-icons/soundcloud.svg">
         <span class="header__social-menu-link-icon-soundcloud"></span>
         <span class="header__social-menu-link-tooltip">soundcloud</span>
-      </a>
+      </a> -->
     </nav>
 
   </div>
