add mob menu button, upd ReleasesListSwiper mob styles

--- a/_components/ReleasePage/index.html
+++ b/_components/ReleasePage/index.html
@@ -1,5 +1,5 @@
 <div class="releases-page">
-  {% include SVG/triangle.svg %}
+  {% include SVG/deco-triangle.svg %}
 
   <div class="releases-page__wrapper">
 
