--- a/_components/Header/index.html
+++ b/_components/Header/index.html
@@ -3,36 +3,40 @@
 
   {% include LogoLink/index.html %}
 
-    <nav class="header__main-menu">
-      <!-- <a href="{{ site.baseurl }}/news/" class="header__main-menu-link{% if page.url contains 'news' %} is-selected{% endif %}">News</a> -->
-      <a href="{{ site.baseurl }}/release/tentura-beyond-illusion/" class="header__main-menu-link{% if page.url contains 'release' %} is-selected{% endif %}">Releases</a>
-      <!-- <a href="{{ site.baseurl }}/artists/" class="header__main-menu-link{% if page.url contains 'artist' %} is-selected{% endif %}">Artists</a> -->
-      <!-- <a href="{{ site.baseurl }}/events/" class="header__main-menu-link{% if page.url contains 'event' %} is-selected{% endif %}">Events</a> -->
-      <!-- <a href="{{ site.baseurl }}/friends/" class="header__main-menu-link{% if page.url contains 'friends' %} is-selected{% endif %}">Friends</a> -->
-    </nav>
+  <nav class="header__main-menu">
+    <!-- <a href="{{ site.baseurl }}/news/" class="header__main-menu-link{% if page.url contains 'news' %} is-selected{% endif %}">News</a> -->
+    <a href="{{ site.baseurl }}/release/tentura-beyond-illusion/" class="header__main-menu-link{% if page.url contains 'release' %} is-selected{% endif %}">Releases</a>
+    <!-- <a href="{{ site.baseurl }}/artists/" class="header__main-menu-link{% if page.url contains 'artist' %} is-selected{% endif %}">Artists</a> -->
+    <!-- <a href="{{ site.baseurl }}/events/" class="header__main-menu-link{% if page.url contains 'event' %} is-selected{% endif %}">Events</a> -->
+    <!-- <a href="{{ site.baseurl }}/friends/" class="header__main-menu-link{% if page.url contains 'friends' %} is-selected{% endif %}">Friends</a> -->
+  </nav>
 
-    <nav class="header__social-menu">
-      <a class="header__social-menu-link" href="https://sentimony.bandcamp.com" target="_blank">
-        <img class="header__social-menu-link-img" src="{{ site.baseurl }}/assets/img/svg-icons/bandcamp.svg">
-        <span class="header__social-menu-link-icon-bandcamp"></span>
-        <span class="header__social-menu-link-tooltip">bandcamp</span>
-      </a>
-      <a class="header__social-menu-link" href="https://www.facebook.com/sentimony.records" target="_blank">
-        <img class="header__social-menu-link-img" src="{{ site.baseurl }}/assets/img/svg-icons/facebook.svg">
-        <span class="header__social-menu-link-icon-facebook"></span>
-        <span class="header__social-menu-link-tooltip">facebook</span>
-      </a>
-      <a class="header__social-menu-link" href="https://www.youtube.com/channel/UCMvuVxLPE5VBjw0YH1uE4ig" target="_blank">
-        <img class="header__social-menu-link-img" src="{{ site.baseurl }}/assets/img/svg-icons/youtube.svg">
-        <span class="header__social-menu-link-icon-youtube"></span>
-        <span class="header__social-menu-link-tooltip">youtube</span>
-      </a>
-      <!-- <a class="header__social-menu-link" href="https://soundcloud.com/sentimony" target="_blank">
-        <img class="header__social-menu-link-img" src="{{ site.baseurl }}/assets/img/svg-icons/soundcloud.svg">
-        <span class="header__social-menu-link-icon-soundcloud"></span>
-        <span class="header__social-menu-link-tooltip">soundcloud</span>
-      </a> -->
-    </nav>
+  <nav class="header__social-menu">
+    <a class="header__social-menu-link" href="https://sentimony.bandcamp.com" target="_blank">
+      <img class="header__social-menu-link-img" src="{{ site.baseurl }}/assets/img/svg-icons/bandcamp.svg">
+      <span class="header__social-menu-link-icon-bandcamp"></span>
+      <span class="header__social-menu-link-tooltip">bandcamp</span>
+    </a>
+    <a class="header__social-menu-link" href="https://www.facebook.com/sentimony.records" target="_blank">
+      <img class="header__social-menu-link-img" src="{{ site.baseurl }}/assets/img/svg-icons/facebook.svg">
+      <span class="header__social-menu-link-icon-facebook"></span>
+      <span class="header__social-menu-link-tooltip">facebook</span>
+    </a>
+    <a class="header__social-menu-link" href="https://www.youtube.com/channel/UCMvuVxLPE5VBjw0YH1uE4ig" target="_blank">
+      <img class="header__social-menu-link-img" src="{{ site.baseurl }}/assets/img/svg-icons/youtube.svg">
+      <span class="header__social-menu-link-icon-youtube"></span>
+      <span class="header__social-menu-link-tooltip">youtube</span>
+    </a>
+    <!-- <a class="header__social-menu-link" href="https://soundcloud.com/sentimony" target="_blank">
+      <img class="header__social-menu-link-img" src="{{ site.baseurl }}/assets/img/svg-icons/soundcloud.svg">
+      <span class="header__social-menu-link-icon-soundcloud"></span>
+      <span class="header__social-menu-link-tooltip">soundcloud</span>
+    </a> -->
+  </nav>
+
+  <a href="{{ site.baseurl }}/release/tentura-beyond-illusion/" class="header__mob-menu-button">
+    <img class="header__mob-menu-button-img" src="{{ site.baseurl }}/assets/img/svg-icons/menu.svg">
+  </a>
 
   </div>
 </header>
