--- a/_components/ReleasePage/index.html
+++ b/_components/ReleasePage/index.html
@@ -11,6 +11,7 @@
       <!-- {{ content }} -->
 
       <div class="releases-page__info">
+        <div class="releases-page__date">{{ page.date | date: "%Y" }}</div>
         <h1 class="releases-page__title">{{ page.title }}</h1>
 
         <div class="releases-page__listen-on">Listen on:</div>
