add IframeSize and release-page-content

--- a/_components/Footer/index.html
+++ b/_components/Footer/index.html
@@ -1,7 +1,7 @@
 <footer class="footer">
 
-  <nav class="social">
-    <!-- <span>Follow Us:</span> -->
+  <p>Follow Us:</p>
+  <div class="footer__social">
     <a href="https://sentimony.bandcamp.com" target="_blank">
       <span class="icon-bandcamp"></span>
       <span class="tooltip">bandcamp</span>
@@ -22,29 +22,38 @@
         <span class="icon-twitter"></span>
         <span class="tooltip">twitter</span>
     </a> -->
+    <!-- <a href="https://www.mixcloud.com/sentimony" target="_blank">
+        <span class="icon-mixcloud"></span>
+        <span class="tooltip">mixcloud</span>
+    </a> -->
     <!-- <a href="http://www.discogs.com/label/82598-Sentimony-Records" target="_blank">
         <span class="icon-discogs"></span>
         <span class="tooltip">discogs</span>
     </a> -->
-  </nav>
+  </div>
 
-  <nav class="labels">
+  <div class="footer__labels">
     <a href="https://sentimony.com" class="active">Sentimony Records</a>
     <a href="https://aquadeepmusic.sentimony.com">Aqua Deep Music</a>
     <a href="https://lookinglook.sentimony.com">Lookinglook Records</a>
-  </nav>
+  </div>
 
-  <!-- <div>Web Development & Design by <a href="http://ihororlovskyi.com" target="_blank">Ihor Orlovskyi</a></div> -->
-  <div>2006 - 2017 © Sentimony Records</div>
-  <div>All Rights Reserved</div>
-  <div><span class="icon-sentimony-records-logo"></span></div>
+  <div class="footer__copyright">
+    <div>2006 - 2017 © Sentimony Records</div>
+    <div>All Rights Reserved</div>
+    <div><span class="icon-sentimony-records-logo"></span></div>
+  </div>
 
-  <br>
+  <div class="footer__powered">
+    <div>Web development by <a href="https://ihororlovskyi.com" target="_blank">Ihor Orlovskyi</a></div>
+    <div>Design by <a href="https://www.facebook.com/apivniuk" target="_blank">Anton Pivniuk</a></div>
+  </div>
 
-  <nav class="labels labels--small">
+  <div class="footer__versions">
     <a href="https://sentimony.com" class="active">jekyll</a>
     <a href="https://gatsby.sentimony.com">gatsby</a>
     <a href="https://nuxt.sentimony.com">nuxt</a>
-  </nav>
+  </div>
+
 </footer>
 
